--- a/css/styles.css
+++ b/css/styles.css
@@ -565,7 +565,7 @@ img {
     margin-right: 70px;
 }
 
-.connect-title {
+.connect-title, .section-title {
     margin-top: 0;
     margin-bottom: 20px;
 
@@ -575,6 +575,10 @@ img {
     text-transform: uppercase;
     
     color: var(--primary-bg-color);
+}
+
+.connect-container {
+    margin-right: 93px;
 }
 
 .footer-social {
@@ -597,6 +601,18 @@ img {
 
 .cocial-link:hover, .cocial-link:focus {
     background-color: var(--accent-color);
+}
+
+.subscribe-input {
+    margin-right: 12px;
+}
+
+.subscribe-btn {
+    padding: 10px 28px 10px 29px;
+    color: var(--primary-bg-color)
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 }
 
 /* Backdrop window */
@@ -659,6 +675,21 @@ img {
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon {
+    transform: rotate(0deg);
+    color: currentColor;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover {
+    background-color: var(--accent-hero-color);
+}
+
+.modal-btn:hover .modal-icon {
+    transform: rotate(360deg);
+    fill: var(--primary-bg-color);
 }
 
 /* Portfolio */
@@ -813,19 +844,4 @@ img {
 .portfolio-link:hover .card-paragraph,
 .portfolio-link:focus .card-paragraph {
     opacity: 1;
-}
-
-.modal-icon {
-    transform: rotate(0deg);
-    color: currentColor;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-btn:hover {
-    background-color: var(--accent-hero-color);
-}
-
-.modal-btn:hover .modal-icon{
-    transform: rotate(360deg);
-    fill: var(--primary-bg-color);
 }
