--- a/css/styles.css
+++ b/css/styles.css
@@ -553,6 +553,7 @@ img {
 
 /* margin for footer */
 .footer-item {
+    width: 231px;
     margin-bottom: 9px;
 }
 
@@ -565,7 +566,8 @@ img {
     margin-right: 70px;
 }
 
-.connect-title, .section-title {
+.connect-title, .subscribe-title {
+    display: block;
     margin-top: 0;
     margin-bottom: 20px;
 
@@ -603,16 +605,54 @@ img {
     background-color: var(--accent-color);
 }
 
+.subscribe-form {
+    display: flex;
+    align-items: flex-end;
+}
+
+/* .subscribe-label {
+    display: flex;
+    flex-direction: column;
+} */
+
 .subscribe-input {
+    padding: 15px 15px 15px 16px;
     margin-right: 12px;
+    width: 358px;
+    height: 50px;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: var(--footer-link-color);
+    background-color: var(--footer-bg-color);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
 }
 
 .subscribe-btn {
+    width: 200px;
+    height: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px 28px 10px 29px;
-    color: var(--primary-bg-color)
+    color: var(--primary-bg-color);
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: none;
     border-radius: 4px;
+}
+
+.subscribe-btn-text {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: var(--primary-bg-color);
+}
+
+.subscribe-icon {
+    fill: currentColor;
 }
 
 /* Backdrop window */
