--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@
     --bg-overlay-color: rgba(0, 0, 0, 0.2);
     --modal-btn-border-color: rgba(0, 0, 0, 0.1);
     --bg-card-portfolio: rgba(33, 150, 243, 0.9);
+    --textarea-color: rgba(117, 117, 117, 0.5);
 }
 
 body {
@@ -608,17 +609,18 @@ img {
 .subscribe-form {
     display: flex;
     align-items: flex-end;
+    flex-grow: 1;
 }
 
-/* .subscribe-label {
-    display: flex;
-    flex-direction: column;
-} */
+.subscribe-label {
+    flex-grow: 2;
+    margin-right: 12px;
+    cursor: pointer;
+}
 
 .subscribe-input {
     padding: 15px 15px 15px 16px;
-    margin-right: 12px;
-    width: 358px;
+    width: 100%;
     height: 50px;
     font-size: 16px;
     line-height: 1.25;
@@ -627,6 +629,8 @@ img {
     background-color: var(--footer-bg-color);
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
+    outline: none;
+    cursor: pointer;
 }
 
 .subscribe-btn {
@@ -641,6 +645,7 @@ img {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border: none;
     border-radius: 4px;
+    cursor: pointer;
 }
 
 .subscribe-btn-text {
@@ -687,7 +692,7 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 8px;
+    padding: 40px;
 
     min-width: 528px;
     min-height: 521px;
@@ -702,10 +707,13 @@ img {
 
 /* Button close in modal window */
 .modal-btn {
+    position: absolute;
     display: flex;
     margin-left: auto;
     justify-content: center;
     align-items: center;
+    top: 8px;
+    right: 8px;
 
     width: 30px;
     height: 30px;
@@ -730,6 +738,87 @@ img {
 .modal-btn:hover .modal-icon {
     transform: rotate(360deg);
     fill: var(--primary-bg-color);
+}
+
+.modal-title {
+    margin-top: 0;
+    margin-bottom: 12px;
+    margin-left: auto;
+    margin-right: auto;
+
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+}
+
+.client-label {
+    display: block;
+    margin-top: 0;
+    margin-right: 0;
+    margin-left: 0;
+    margin-bottom: 4px;
+
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    cursor: pointer;
+}
+
+.contact-label {
+    display: block;
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.contact-label:last-child {
+    margin-bottom: 20px;
+}
+
+.contact-input {
+    display: block;
+    margin: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 42px;
+    padding-right: 12px;
+    width: 100%;
+    height: 40px;
+    cursor: pointer;
+    outline: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+}
+
+.contact-input:focus {
+    border-color: var(--accent-color);
+}
+
+.contact-input:focus + .client-name-icon {
+    fill: var(--accent-color);
+}
+
+.client-name-icon {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    /* transform: translateY(-50%); */
+}
+
+.client-comment {
+    padding: 12px 16px;
+
+    width: 100%;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    color: var(--textarea-color);
+    outline: none;
+    resize: none;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
 }
 
 /* Portfolio */
