--- a/css/styles.css
+++ b/css/styles.css
@@ -821,6 +821,35 @@ img {
     border-radius: 4px;
 }
 
+.checkbox-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.checkbox-icon {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    margin-right: 7px;
+    outline: none;
+    background-size: contain;
+    border: 2px solid var(--title-text-color);
+    border-radius: 2px;
+}
+
+.checkbox-input:checked + .checkbox-icon {
+    background-color: var(--accent-color);
+    background-image: url(../images/icon-check.svg);
+    background-size: contain;
+    background-origin: border-box;
+    border-color: var(--accent-color);
+}
+
+.checkbox-link {
+    color: var(--accent-color);
+}
+
 /* Portfolio */
 
 /* List of btn */
