--- a/css/styles.css
+++ b/css/styles.css
@@ -250,7 +250,7 @@ img {
 }
 
 /* Hero btn */
-.hero-button {
+.hero-button, .answer-submit {
     padding: 10px 32px;
 
     min-width: 200px;
@@ -271,7 +271,9 @@ img {
 
 /* Effects hover and focus for hero btn */
 .hero-button:hover,
-.hero-button:focus {
+.hero-button:focus,
+.answer-submit:hover,
+.answer-submit:focus {
     background-color: var(--accent-hero-color);
 }
 
@@ -754,6 +756,10 @@ img {
     color: var(--title-text-color);
 }
 
+.modal-form {
+    text-align: center;
+}
+
 .client-label {
     display: block;
     margin-top: 0;
@@ -761,6 +767,7 @@ img {
     margin-left: 0;
     margin-bottom: 4px;
 
+    text-align: left;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
@@ -804,10 +811,10 @@ img {
     position: absolute;
     top: 50%;
     left: 12px;
-    /* transform: translateY(-50%); */
 }
 
 .client-comment {
+    display: block;
     padding: 12px 16px;
 
     width: 100%;
@@ -825,29 +832,38 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 30px;
+
+    color:rgba(0, 0, 0, 0);
+    cursor: pointer;
 }
 
 .checkbox-icon {
     display: inline-block;
-    width: 16px;
-    height: 15px;
+    fill: currentColor;
     margin-right: 7px;
-    outline: none;
-    background-size: contain;
     border: 2px solid var(--title-text-color);
     border-radius: 2px;
+    outline: none;
 }
 
 .checkbox-input:checked + .checkbox-icon {
     background-color: var(--accent-color);
-    background-image: url(../images/icon-check.svg);
-    background-size: contain;
     background-origin: border-box;
     border-color: var(--accent-color);
+    color: var(--primary-bg-color);
+}
+
+.checkbox-text {
+    color: var(--primary-text-color);
 }
 
 .checkbox-link {
     color: var(--accent-color);
+}
+
+.answer-submit {
+    padding: 10px 55px 10px 56px;
 }
 
 /* Portfolio */
