--- a/css/styles.css
+++ b/css/styles.css
@@ -860,6 +860,10 @@ img {
     box-shadow: 0 0 0 0.2em var(--accent-color);
 }
 
+.checkbox-input:checked:focus + .checkbox-icon {
+    box-shadow: none;
+}
+
 .checkbox-input:checked + .checkbox-icon {
     background-color: var(--accent-color);
     background-origin: border-box;
